# PythonStudy

./: .project  .pydevproject  index.py  main.py  manifest.json  sync.rexpfd  window.py
BinanceHistoryParser/: README.md  generated.py  main.py  requirements.txt  run_all.sh  setup.cfg
ExanteTaxCalculator/: README.md  calculator.py  requirements.txt  run_all.sh
ExanteTaxCalculator/doc/: calculation.puml  calculation_process  class.puml  layers
ExanteTaxCalculator/src/: calculator.py  main.py  requirements.txt
ExanteTaxCalculator/src/application/: trader.py
ExanteTaxCalculator/src/domain/: asset.py  buy_item.py  buy_sell_pair.py  buy_sell_pair_pln_quotator.py  currency.py  currency_test.py  currency_wallet.py  currency_wallet_test.py  errors.py  exchange_item.py  money_flow_calculator.py  share.py  (+19 more)
Jupyter/: editor_study.ipynb
Jupyter/.ipynb_checkpoints/: editor_study-checkpoint.ipynb
OpenCV.Tracking/: .pylintrc  Camera.py  Common.py  README.md  Tracking.py  main.py
cgi-bin/: index.py
cgi-bin/data/: Terminal.htm
cgi-bin/src/: commandexecutor.py  errorcontroller.py  errorrenderer.py  httpresponse.py  maincontroller.py  terminalcontroller.py  terminalrenderer.py  utf8printer.py
data/: Error.htm  Terminal.htm
documentation/: model.simp
python-http-client-demo/: README.md  run_all.sh
python-http-client-demo/src/: main.py  requirements.txt
setuptools-demo/: README.md  run_all.sh
setuptools-demo/setup.cfg/: README.md  setup.cfg
setuptools-demo/setup.py/: README.md  run_all.sh  setup.py
src/: __init__.py  errorcontroller.py  errorrenderer.py  httpresponse.py  main.py  maincontroller.py  onlineview.py  terminalcontroller.py  terminalrenderer.py
usd-to-pln/: main.py
(+87 files in other folders)
