[metadata]
name = exante-calculator
version = 0.1.0
description = Exante tax calculator for polish tax declaration PIT-38
long_description = file: README.md
author = mateuszmidor
author_email = mateuszmidor@mateuszmidor.com
license = GPL
url = https://github.com/mateuszmidor/PythonStudy/tree/master/ExanteTaxCalculator

[options]
packages = find:
install_requires = 
    money==1.3.0 
    requests==2.25
    pytest==6.1.2
    pytest-cov==2.10.1
    mypy==0.790
    mypy-extensions==0.4.3

python_requires = ~=3.5

[options.packages.find]
exclude = test*

[options.entry_points]
console_scripts =
    exante-calculator = src.calculator:main
