[metadata]
name = setuptools-demo
version = 0.0.1
description = setuptools demo
author = mateuszmidor
author_email = mateuszmidor@mateuszmidor.com
url = https://github.com/mateuszmidor/PythonStudy/setuptools-demo

[options]
packages = find:

[options.packages.find]
exclude =
    tests*
    testing

[options.entry_points]
console_scripts =
    setuptools-demo = src.main:main
