[metadata]
name = setuptools-demo
version = 0.0.1
description = setuptools demo
long_description = file: README.md
author = mateuszmidor
author_email = mateuszmidor@mateuszmidor.com
license = MIT
url = https://github.com/mateuszmidor/PythonStudy/setuptools-demo

[options]
packages = find:
install_requires = requests>=2
python_requires = ~=3.5

[options.packages.find]
exclude =
    tests*
    testing

[options.entry_points]
console_scripts =
    setuptools-demo = src.main:main
